fix: make image delivery unlimited by default
